--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!--=============== REMIXICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css">
     <!--==================== swiper CSS=================-->
-    <link rel="stylesheet" href="../Pizze/swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../Pizze/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Responsive Pizza Website - Bedimcode</title>
 </head>
@@ -339,11 +339,11 @@
          </span>
     </footer>
     <!--====================Scrollreveal===============-->
-    <script src="../Pizze/scrollreveal.min.js"></script>
+    <script src="scrollreveal.min.js"></script>
     <!--====================Swiper js====================-->
-    <script src="../Pizze/swiper-bundle.min.js"></script>
+    <script src="swiper-bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="../Pizze/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
